- remove feedback form on home page - fix ugly logo header at top of non-home pages - bold nav font - made nav align with body text - limited body text width to 1100px for readability - fixed header wrapping problem (line-height was too high) - removed user menu button

--- a/_nb_updates.scss
+++ b/_nb_updates.scss
@@ -241,6 +241,11 @@
     margin: auto 0;
   }
 }
+@media (max-width: 768px) {
+  .site-logo-wrap {
+    display: none;
+  }
+}
 @media (max-width: 921px ) {
   .onecolumn-container {
     margin: auto;
