--- a/theme.scss
+++ b/theme.scss
@@ -363,16 +363,15 @@ h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
   line-height: 1.25em;
+  margin-bottom: 1rem;
 }
 
 h1 {
   font-size: 2.5em;
-  line-height: 2.5em;
 }
 
 h2 {
   font-size: 2.33333em;
-  line-height: 2.33333em;
   &:after {
     content: "";
     display: block;
@@ -385,7 +384,6 @@ h2 {
 
 h3 {
   font-size: 1.5em;
-  margin-bottom: 1em;
   a {
     color: $text-color;
   }
@@ -393,13 +391,11 @@ h3 {
 
 h4 {
   font-size: 1em;
-  margin-bottom: 1em;
 }
 
 h5 {
   font-size: 1em;
   font-weight: 700;
-  margin-bottom: 1em;
 }
 
 h6 {
@@ -594,7 +590,6 @@ body.no-transform-wrap {
 }
 
 .intro {
-  margin-bottom: 3em;
   -webkit-font-smoothing: antialiased;
   p {
     font-size: 1.25em;
@@ -807,7 +802,8 @@ nav {
 
 .user-menu-button {
   cursor: pointer;
-  display: block;
+  // User menu is not necessary
+  display: none;
   float: left;
   padding: 16px 15px 14px 15px;
   &.supporter-nav-toggle {
@@ -1724,17 +1720,15 @@ footer {
     header {
       text-align: center;
       padding: 0;
-      height: 250px;
+      height: 160px;
       &:before {
         content:"";
-        position:absolute;
-        display:block;
+        position: absolute;
+        display: block;
         width: 100%;
         height: 100%;
-        background: transparent $hatch-background;
-        background-repeat: repeat;
+        background: $theme-color-1;
         z-index: 0;
-        @include opacity(.3);
       }
       img {
         max-width: 240px;
@@ -2875,6 +2869,8 @@ h4.expander-head {
 // homepage widgets
 
 ul.homepage_excerpt-list {
+  // can't figure out any other way to get this to not render
+  display: none;
   list-style: none;
   margin: 5em auto 0;
   max-width: 1440px;
@@ -3220,6 +3216,11 @@ and (max-width : 320px) {
 @media (max-width: 921px ) {
   .onecolumn-container {
     margin: auto;
+  }
+}
+@media (min-width: 768px) {
+  .site-logo-wrap {
+    display: none;
   }
 }
 @media (max-width: 767px) {
